# scraper-bcv

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  get_dolar.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  verify_setup.sh
.github/workflows/: ci-cd.yml  ci.yml
src/: __init__.py  bcv_client.py
src/scraper_bcv/: __init__.py  __main__.py  bcv_client.py  cli.py
tests/: conftest.py  test_bcv_client.py
tests/fixtures/: bcv_sample.py  bcv_sample_no_usd.py
