[metadata]
name = scraper-bcv
version = 0.1.0
author = Francisco Antonio Quivera González
author_email = fquivera@gmail.com
description = Cliente Python para obtener datos del BCV con trazabilidad y cumplimiento legal
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/fquivera/scraper-bcv
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    license-files = ["LICEN[CS]E*"]
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    Topic :: Office/Business :: Financial

[project.urls]
Homepage = "https://github.com/fquivera/scraper-bcv"
Issues = "https://github.com/fquivera/scraper-bcv/issues"

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    requests>=2.32
    beautifulsoup4>=4.13
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    scraper-bcv = scraper_bcv.__main__:main
